styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --primary: 240 5.9% 10%;
    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 0 0% 14.9%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 24.6 95% 53.1%;
  }

  .dark {
    --primary: 0 0% 98%;
    --sidebar-background: 0 0% 9%;
    --sidebar-foreground: 0 0% 63.9%;
    --sidebar-primary: 224.3 76.3% 48%;
    --sidebar-primary-foreground: 0 0% 100%;
    --sidebar-accent: 240 3.7% 15.9%;
    --sidebar-accent-foreground: 240 4.8% 95.9%;
    --sidebar-border: 240 3.7% 15.9%;
    --sidebar-ring: 24.6 95% 53.1%;
  }
}

@layer components {
  .component-selected {
    @apply outline outline-1 outline-lime-500 dark:outline-green-500;
  }

  .component-hovered {
    @apply outline outline-1 outline-lime-500 dark:outline-green-500;
  }
}

@layer utilities {
  /* Hide scrollbar for Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }
  /* Hide scrollbar for IE, Edge and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }

  .mask-fade {
    -webkit-mask-image: linear-gradient(to left, transparent, black 20%);
    mask-image: linear-gradient(to left, transparent, black 20%);
  }

  .bg-dot-pattern {
    background-image: conic-gradient(
      at 92% 8%,
      #202128 90deg,
      transparent 0 225deg,
      transparent 0
    );
    background-size: 15px 15px;
  }

  .bg-dot-pattern-white {
    background-image: conic-gradient(
      at 92% 8%,
      #303132 90deg,
      transparent 0 225deg,
      transparent 0
    );
    background-size: 15px 15px;
  }
}

.dark .w-color-sketch {
  --sketch-background: #323232 !important;
}

.dark .w-color-swatch {
  --sketch-swatch-border-top: 1px solid #525252 !important;
}

.dark .w-color-block {
  --block-background-color: #323232 !important;
  --block-box-shadow: rgb(0 0 0 / 10%) 0 1px !important;
}

.dark .w-color-editable-input {
  --editable-input-label-color: #757575 !important;
  --editable-input-box-shadow: #616161 0px 0px 0px 1px inset !important;
  --editable-input-color: #bbb !important;
}

.dark .w-color-github {
  --github-border: 1px solid rgba(0, 0, 0, 0.2) !important;
  --github-background-color: #323232 !important;
  --github-box-shadow: rgb(0 0 0 / 15%) 0px 3px 12px !important;
  --github-arrow-border-color: rgba(0, 0, 0, 0.15) !important;
}

.dark .w-color-compact {
  --compact-background-color: #323232 !important;
}

.dark .w-color-material {
  --material-background-color: #323232 !important;
  --material-border-bottom-color: #707070 !important;
}

.dark .w-color-alpha {
  --alpha-pointer-background-color: #6a6a6a !important;
  --alpha-pointer-box-shadow: rgb(0 0 0 / 37%) 0px 1px 4px 0px !important;
}

